--- a/brakes.htm
+++ b/brakes.htm
@@ -40,7 +40,7 @@
               <ul class="links"><li class="menu-155 first"><a href="http://brothersrepair.com/" title="">Home</a></li>
 <li class="menu-156"><a href="http://brothersrepair.com/about.htm" title="">About</a></li>
 <li class="menu-171"><a href="http://brothersrepair.com/vehicles.htm" title="">Vehicles</a></li>
-<li class="menu-158 last"><a href="http://brothersrepair.com/contacts.htm" title="">Contacts</a></li>
+<li class="menu-158 last"></li>
 </ul>            </div> <!-- /#primary -->
           
           
