Remove links to contacts

--- a/html/vehicles.htm
+++ b/html/vehicles.htm
@@ -156,9 +156,9 @@
       <h2 class="title">Our shops</h2>
   
   <div class="content">
-    <p><strong><a href="http://brothersrepair.com/contacts.htm#yarmouth">United Gas in South Yarmouth</a></strong></p>
+    <p><strong>United Gas in South Yarmouth</strong></p>
 <p>1308 route 28, South Yarmouth, MA (508) 398-0780‎</p>
-<p><strong><a href="http://brothersrepair.com/contacts.htm#harwich">United Gas in Harwich Port</a></strong><br>570 Route 28, Harwich Port, MA‎ (508) 432-6940</p>
+<p><strong>United Gas in Harwich Port</strong><br>570 Route 28, Harwich Port, MA‎ (508) 432-6940</p>
   </div>
 
   
