--- a/src/about.htm
+++ b/src/about.htm
@@ -40,6 +40,7 @@
               <ul class="links"><li class="menu-155 first"><a href="http://brothersrepair.com/" title="">Home</a></li>
 <li class="menu-156 active-trail active"><a href="http://brothersrepair.com/about.htm" title="" class="active">About</a></li>
 <li class="menu-171"><a href="http://brothersrepair.com/vehicles.htm" title="">Vehicles</a></li>
+<li class="menu-171"><a href="http://brothersrepair.com/convenience.htm" title="">Convenience store</a></li>
 <li class="menu-158 last"></li>
 </ul>            </div> <!-- /#primary -->
           
