--- a/src/index.htm
+++ b/src/index.htm
@@ -40,6 +40,7 @@
               <ul class="links"><li class="menu-155 active-trail first active"><a href="http://brothersrepair.com/" title="" class="active">Home</a></li>
 <li class="menu-156"><a href="http://brothersrepair.com/about.htm" title="">About</a></li>
 <li class="menu-171"><a href="http://brothersrepair.com/vehicles.htm" title="">Vehicles</a></li>
+<li class="menu-171"><a href="http://brothersrepair.com/convenience.htm" title="">Convenience store</a></li>
 <li class="menu-158 last"></li>
 </ul>            </div> <!-- /#primary -->
           
