--- a/src/tires.htm
+++ b/src/tires.htm
@@ -115,9 +115,15 @@
   
   <div class="content">
     <p><strong>United Gas in South Yarmouth</strong></p>
-<p>1308 route 28, South Yarmouth, MA (508) 398-0780‎</p>
-<p><strong>United Gas in Harwich Port</strong><br>570 Route 28, Harwich Port, MA‎ (508) 432-6940</p>
+    <p>1308 route 28, South Yarmouth, MA (508)398-0780</p>
+
+    <p><strong>United Gas in Harwich Port</strong></p>
+    <p>570 Route 28, Harwich Port, MA (508)432-6940</p>
+
+    <p><strong>United Gas in Hyannis</strong></p>
+    <p>199 Falmouth road, Hyannis, MA (774)470-4511</p>
   </div>
+
 
   
 </div></div> <!-- /block-inner, /block -->
