--- a/src/vehicles.htm
+++ b/src/vehicles.htm
@@ -40,6 +40,7 @@
               <ul class="links"><li class="menu-155 first"><a href="http://brothersrepair.com/" title="">Home</a></li>
 <li class="menu-156"><a href="http://brothersrepair.com/about.htm" title="">About</a></li>
 <li class="menu-171 active-trail active"><a href="http://brothersrepair.com/vehicles.htm" title="" class="active">Vehicles</a></li>
+<li class="menu-171"><a href="http://brothersrepair.com/convenience.htm" title="">Convenience store</a></li>
 <li class="menu-158 last"></li>
 </ul>            </div> <!-- /#primary -->
           
