--- a/src/vehicles.htm
+++ b/src/vehicles.htm
@@ -165,6 +165,8 @@
 
     <p><strong>United Gas in Hyannis</strong></p>
     <p>199 Falmouth road, Hyannis, MA (774)470-4511</p>
+
+    <p class="orange center">10¢ off for every gallon when paying with cash!</p>
   </div>
 
 
