--- a/src/brakes.htm
+++ b/src/brakes.htm
@@ -24,6 +24,7 @@
 <![endif]-->
   </head>
 <body class="not-front not-logged-in node-type-services one-sidebar sidebar-right page-service-brake-systems section-service">
+  <script src="./assets/ga.js"></script>
 
   <div id="page"><div id="page-inner">
 
