--- a/src/index.htm
+++ b/src/index.htm
@@ -25,6 +25,9 @@
   </head>
 <body class="front not-logged-in one-sidebar sidebar-right">
 
+  <script src="./assets/ga.js"></script>
+
+
   <div id="page"><div id="page-inner">
 
     <div id="header"><div id="header-inner" class="clear-block">
