--- a/src/vehicles.htm
+++ b/src/vehicles.htm
@@ -25,6 +25,9 @@
   </head>
 <body class="not-front not-logged-in node-type-page one-sidebar sidebar-right page-car-brands-we-service section-car-brands-we-service">
 
+  <script src="./assets/ga.js"></script>
+
+
   <div id="page"><div id="page-inner">
 
     <div id="header"><div id="header-inner" class="clear-block">
