--- a/src/state_inspection.htm
+++ b/src/state_inspection.htm
@@ -25,6 +25,9 @@
   </head>
 <body class="not-front not-logged-in node-type-services one-sidebar sidebar-right page-service-state-inspection section-service">
 
+  <script src="./assets/ga.js"></script>
+
+
   <div id="page"><div id="page-inner">
 
     <div id="header"><div id="header-inner" class="clear-block">
